--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ TELEGRAM_API_TOKEN=your_telegram_bot_token
 TELEGRAM_CHAT_ID=your_chat_id
 
 # ChromeDriver Path
-CHROMEDRIVER_PATH=./chromedriver
+CHROMEDRIVER_PATH=./drivers/chromedriver
 
 # Account 1
 EMAIL1=nhx4@sika3.com
