--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Automation Script
+name: Test Automation
 
 on:
   push:
@@ -6,30 +6,27 @@ on:
       - main
 
 jobs:
-  run-script:
+  selenium-tests:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout Code
       uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install selenium python-telegram-bot
 
     - name: Set up ChromeDriver
       run: |
         sudo apt-get update
         sudo apt-get install -y wget unzip
-        wget https://chromedriver.storage.googleapis.com/131.0.6778.135/chromedriver_linux64.zip
-        unzip chromedriver_linux64.zip -d ./drivers/
+        CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1)
+        CHROMEDRIVER_VERSION=$(wget -qO- "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
+        CHROMEDRIVER_URL="https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
+        wget $CHROMEDRIVER_URL -O chromedriver.zip
+        unzip -o chromedriver.zip -d ./drivers/
+        rm chromedriver.zip
         chmod +x ./drivers/chromedriver
 
-    - name: Run Python script
+    - name: Install Python dependencies
+      run: pip install -r requirements.txt
+
+    - name: Run Tests
       run: python script.py
