--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,17 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Dependencies
+      run: sudo apt-get update && sudo apt-get install -y wget unzip
+
+    - name: Install Google Chrome
       run: |
-        sudo apt-get update && sudo apt-get install -y wget unzip
         wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
         echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
+
+    - name: Verify Google Chrome Installation
+      run: google-chrome --version
 
     - name: Download ChromeDriver
       run: |
