--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 TELEGRAM_API_TOKEN=your_telegram_bot_token
 TELEGRAM_CHAT_ID=your_chat_id
 
-# ChromeDriver Path
-CHROMEDRIVER_PATH=./drivers/chromedriver
+# Geckodriver Path
+GECKODRIVER_PATH=./drivers/geckodriver
 
 # Account 1
 EMAIL1=nhx4@sika3.com
