--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
 selenium
+requests
 python-telegram-bot
-python-dotenv
-selenium==4.12.0
-python-telegram-bot==20.3
-python-dotenv==1.0.0
-requests==2.28.1
-cloudscraper==1.2.71
-beautifulsoup4==4.11.1
