--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Run Selenium Claim Rewards
 
 on:
+  schedule:
+    - cron: "0 */6 * * *"  # Jalankan setiap 6 jam sekali
   push:
     branches:
       - main
