--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,34 @@
-name: Run Selenium Claim Rewards
+name: Claim Rewards Automation
 
 on:
   schedule:
-    - cron: "0 */6 * * *"  # Jalankan setiap 6 jam sekali
-  push:
-    branches:
-      - main
+    - cron: "0 */6 * * *"  # Menjalankan setiap 6 jam
+  workflow_dispatch:  # Menjalankan manual jika diperlukan
 
 jobs:
-  run-claim-script:
+  claim-rewards:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.12"
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
 
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install selenium python-dotenv requests
-        sudo apt-get update
-        sudo apt-get install -y firefox
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
+          wget https://github.com/mozilla/geckodriver/releases/download/v0.33.0/geckodriver-v0.33.0-linux64.tar.gz
+          tar -xzf geckodriver-v0.33.0-linux64.tar.gz
+          chmod +x geckodriver
+          sudo mv geckodriver /usr/local/bin/
 
-    - name: Install Geckodriver
-      run: |
-        wget https://github.com/mozilla/geckodriver/releases/download/v0.33.0/geckodriver-v0.33.0-linux64.tar.gz
-        tar -xvzf geckodriver-v0.33.0-linux64.tar.gz
-        chmod +x geckodriver
-        sudo mv geckodriver /usr/local/bin/
-
-    - name: Verify Installations
-      run: |
-        firefox --version
-        geckodriver --version
-
-    - name: Run Script
-      env:
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        DATA_JSON: ${{ secrets.DATA_JSON }}
-      run: python script.py
+      - name: Run Script
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          DATA_JSON: ${{ secrets.DATA_JSON }}
+        run: python script.py
