--- a/.env
+++ b/.env
@@ -22,3 +22,4 @@ DATA_JSON='[
     {"username": "monyet1@gmail.com", "password": "monyet1", "server": 5},
     {"username": "naruto123@gmail.com", "password": "naruto123", "server": 24}
 ]'
+GECKODRIVER_PATH=./drivers/geckodriver
