--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 TELEGRAM_BOT_TOKEN=7518490579:AAFDdbjyO4u1L24ke76e_VSDUor-eAqkZgY
 TELEGRAM_CHAT_ID=7997521757
-DATA_JSON='[
+DATA_JSON=[
     {"username": "nhx4@sika3.com", "password": "asd1234", "server": 34},
     {"username": "nhx3@sika3.com", "password": "asd1234", "server": 34},
     {"username": "nhx2@sika3.com", "password": "asd1234", "server": 34},
@@ -21,5 +21,5 @@ DATA_JSON='[
     {"username": "hantu123@gmail.com", "password": "hantu123", "server": 9},
     {"username": "monyet1@gmail.com", "password": "monyet1", "server": 5},
     {"username": "naruto123@gmail.com", "password": "naruto123", "server": 24}
-]'
+]
 GECKODRIVER_PATH=./drivers/geckodriver
