--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,24 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    # Langkah 1: Checkout repository
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
+    # Langkah 2: Setup Python
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.10  # Sesuaikan dengan versi Python yang Anda gunakan
 
-      - name: Install Dependencies
-        run: |
-          pip install selenium requests
+    # Langkah 3: Install dependencies
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Pastikan Anda memiliki file `requirements.txt` yang berisi semua dependensi (termasuk Selenium)
 
-      - name: Download Geckodriver
-        run: |
-          wget -q -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.34.0/geckodriver-v0.34.0-linux64.tar.gz
-          tar -xvzf geckodriver.tar.gz
-          chmod +x geckodriver
-          sudo mv geckodriver /usr/local/bin/
+    # Langkah 4: Download GeckoDriver
+    - name: Download GeckoDriver
+      run: |
+        wget https://github.com/mozilla/geckodriver/releases/latest/download/geckodriver-v0.33.0-linux64.tar.gz
+        mkdir -p drivers
+        tar -xvzf geckodriver-v0.33.0-linux64.tar.gz -C drivers
+        chmod +x drivers/geckodriver
 
-      - name: Run Claim Script
-        run: python script.py
+    # Langkah 5: Jalankan skrip Python
+    - name: Run Claim Script
+      run: python script.py
